Modification for gcc 13.3.0

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,6 +109,7 @@ set(LEMON_LINK_DIRS ${LEMON_BINARY_DIR}/lemon)
 message(STATUS "LEMON_INCLUDE_DIRS ${LEMON_INCLUDE_DIRS}")
 message(STATUS "LEMON_LINK_DIRS ${LEMON_LINK_DIRS}")
 
+option(OT_BUILD_TESTS "Build OpenTimer unit/integration tests" OFF)
 set(OPENTIMER_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/OpenTimer)
 message(STATUS "OPENTIMER_SOURCE_DIR ${OPENTIMER_SOURCE_DIR}")
 set(OPENTIMER_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/thirdparty/OpenTimer)
