modify for DREAMPlace with gcc 11

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,20 @@
-build
-lib
 obj
 *.o
 *.a
 *.pyc
-results
-log
 dreamplace/version.py
 dist
 dreamplace.egg-info
-install
+
 *.so
 .DS_Store
-.vscode/*
+
+.venv
+
 bin
+build
+lib
+install
+
+results
+log
