--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
 name = "apollo-photonic-placement"
 version = "0.1.0"
-requires-python = ">=3.12"
+requires-python = "<=3.9"
 dependencies = []
