--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,6 @@ cairocffi>=0.9.0
 pkgconfig>=1.4.0
 setuptools>=39.1.0
 scipy>=1.1.0
-numpy>=1.15.4
-torch>=1.6.0
+numpy==1.26.4
+torch==2.0.0
 shapely>=1.7.0
